[gd_scene load_steps=6 format=3 uid="uid://doemd2sivlu4u"]

[ext_resource type="Script" uid="uid://c7qbrhkjnw8np" path="res://mobs/mob.gd" id="1_fgbma"]
[ext_resource type="Texture2D" uid="uid://b4pkvbcpxqr5k" path="res://mobs/car.png" id="2_fgbma"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p7hwu"]
radius = 50.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4p423"]
bg_color = Color(0.107146, 0.0988735, 0.225206, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxx3d"]
bg_color = Color(0.356863, 0.827451, 0.482353, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Mob" type="Area2D" groups=["mob"]]
collision_mask = 0
script = ExtResource("1_fgbma")
coin_drop = 3

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_fgbma")

[node name="MobShape" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_p7hwu")

[node name="BarPoint" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="HealthBar" type="ProgressBar" parent="BarPoint"]
unique_name_in_owner = true
offset_left = -37.0
offset_top = -64.0
offset_right = 37.0
offset_bottom = -55.0
theme_override_styles/background = SubResource("StyleBoxFlat_4p423")
theme_override_styles/fill = SubResource("StyleBoxFlat_cxx3d")
step = 0.0
show_percentage = false
metadata/_edit_use_anchors_ = true
